tests/compError/redefineAlias_fn.ucl
// compError
// error: alias 'a' is already defined
// line:6 -> redefinition here

test = @a(__builtin:Number)
	a = 1
	a